find bugs poprawki