@@ -4,9 +4,9 @@ public class DoubleMatrix1D extends Matrix1D<Double> implements DoubleMatrix1DIn
 
     public DoubleMatrix1D(Double[] vector) {
         super(vector.length);
-        this.vector = new Double[N];
-        for (int i = 0; i < N; i++) {
-            this.vector[i] = vector[i];
+        this.setVector(new Double[this.size()]);
+        for (int i = 0; i < this.size(); i++) {
+            this.getVector()[i] = vector[i];
         }
     }
 
@@ -16,9 +16,9 @@ public class DoubleMatrix1D extends Matrix1D<Double> implements DoubleMatrix1DIn
 
     public DoubleMatrix1D(int N, double t) {
         super(N);
-        this.vector = new Double[N];
+        this.setVector(new Double[N]);
         for (int i = 0; i < N; i++) {
-            this.vector[i] = new Double(t);
+            this.getVector()[i] = new Double(t);
         }
     }
 
@@ -28,29 +28,20 @@ public class DoubleMatrix1D extends Matrix1D<Double> implements DoubleMatrix1DIn
 
     public IntegerMatrix1D findG(double x) {
         int count = 0;
-        for (int i = 0; i < N; i++) {
-            if (vector[i].doubleValue() > x) {
+        for (int i = 0; i < this.size(); i++) {
+            if (this.getVector()[i].doubleValue() > x) {
                 count++;
             }
         }
         IntegerMatrix1D res = new IntegerMatrix1D(count);
         count = 0;
-        for (int i = 0; i < N; i++) {
-            if (vector[i].doubleValue() > x) {
-                res.set(count, new Integer(i));
+        for (int i = 0; i < this.size(); i++) {
+            if (this.getVector()[i].doubleValue() > x) {
+                res.set(count, Integer.valueOf(i));
                 count++;
             }
         }
         return res;
     }
-
-    @Override
-    public DoubleMatrix1D clone() {
-        DoubleMatrix1D res = new DoubleMatrix1D(this.N);
-        for (int i = 0; i < this.N; i++) {
-            res.set(i, this.get(i));
-        }
-
-        return res;
-    }
+    
 }
