@@ -4,28 +4,19 @@ public class IntegerMatrix1D extends Matrix1D<Integer> {
 
     public IntegerMatrix1D(int N) {
         super(N);
-        vector = new Integer[N];
+        this.setVector(new Integer[N]);
         for (int i = 0; i < N; i++) {
-            vector[i] = new Integer(0);
+            getVector()[i] = Integer.valueOf(0);
         }
     }
 
-    public static IntegerMatrix1D range(int r) {
+	public static IntegerMatrix1D range(int r) {
         IntegerMatrix1D res = new IntegerMatrix1D(r);
-        res.vector = new Integer[r];
+        res.setVector(new Integer[r]);
         for (int i = 0; i < r; i++) {
-            res.vector[i] = new Integer(i);
+            res.getVector()[i] = Integer.valueOf(i);
         }
         return res;
     }
 
-    @Override
-    public IntegerMatrix1D clone() {
-        IntegerMatrix1D res = new IntegerMatrix1D(this.N);
-        for(int i=0; i<this.N; i++) {
-            res.set(i, this.get(i));
-        }
-
-        return res;
-    }
 }
